<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent"
        tools:context=".RegisterPatient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"

            android:gravity="center"
            android:padding="15dp"
            android:text="@string/register_as_a_doctor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- First Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Last Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Account Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Account Password Requirement-->
        <TextView
            android:id="@+id/passwordRequirementsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_requirements"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_least_6_characters_long"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_least_one_uppercase_letter_a_z"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_least_one_lowercase_letter_a_z"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_least_one_digit_0_9"
            android:layout_marginStart="16dp" />

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Employee Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employee_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_number"
                android:textAllCaps="true"
                android:inputType="text"
                android:maxLength="8"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Doctor's specialties -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/selectCard"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_specialties"
                    android:layout_centerInParent="true"
                    android:id="@+id/specialties">
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow_down"></ImageView>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Bring back to the login page -->
        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/loginNow"
            android:text="@string/click_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</ScrollView>
