<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/user_detail"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First name:"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:layout_marginStart="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last name:"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_surname_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="text"
            android:layout_marginStart="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone number:"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_phone_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="text"
            android:layout_marginStart="10dp"
            android:textSize="16sp" />

        <!-- Add address, employeeNum, email, and id in the first name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_email_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email Text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Address Text"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

        <!-- Add date of registration and two buttons on the same line -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="Specialities :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_specialities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Specialities"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of Registration :"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Registration Date Text"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/user_emp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="Employee Number:"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/user_employee_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Employee Number Text"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/user_health_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="Health Card Number:"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/user_health_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Health Card"
            android:textSize="16sp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/approve_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Approve" />

            <Button
                android:id="@+id/reject_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/reject" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:clickable="true"/>

    </LinearLayout>


</ScrollView>
